--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,7 @@ img {
     .header .nav ul {
         flex-direction: column;
         align-items: center;
+        padding-left: 0;
     }
 
     /* Hero Section */
